--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@wavesurfer/react": "^1.0.4",
     "plotly.js": "^2.26.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "wavesurfer.js": "^7.7.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
